feat(app): ルーティングの調整

--- a/app/mobile/lib/l10n/app_en.arb
+++ b/app/mobile/lib/l10n/app_en.arb
@@ -1,5 +1,6 @@
 {
   "bottomNavigationBarHome": "Home",
-  "bottomNavigationBarQuest": "Quest",
-  "bottomNavigationBarAccount": "Account"
+  "bottomNavigationBarTimer": "Timer",
+  "bottomNavigationBarStopwatch": "Stopwatch",
+  "bottomNavigationBarMiscellaneous": "Miscellaneous"
 }
