--- a/app/mobile/lib/l10n/app_ja.arb
+++ b/app/mobile/lib/l10n/app_ja.arb
@@ -1,5 +1,6 @@
 {
   "bottomNavigationBarHome": "ホーム",
-  "bottomNavigationBarQuest": "クエスト",
-  "bottomNavigationBarAccount": "アカウント"
+  "bottomNavigationBarTimer": "タイマー",
+  "bottomNavigationBarStopwatch": "ストップウォッチ",
+  "bottomNavigationBarMiscellaneous": "その他"
 }
