--- a/feature/home/lib/src/l10n/app_ja.arb
+++ b/feature/home/lib/src/l10n/app_ja.arb
@@ -1,11 +1,7 @@
 {
   "home": "ホーム",
-  "notification": "おしらせ",
-  "schedule": "スケジュール",
-  "today": "今日",
-  "tomorrow": "明日",
-  "menu": "メニュー",
-  "account": "アカウント",
-  "anonymous": "氏名未設定",
-  "nonSchedule": "本日、明日の予定はありません"
+  "feed": "おしらせ",
+  "upgrade": "アップグレード",
+  "recent_timer": "直近のタイマー",
+  "review": "レビュー"
 }
